<resources>
    <string name="app_name">AppWidgetSample</string>
    <string name="appwidget_text">Everything in this app runs through this widget. </string>
    <string name="add_widget">Add widget</string>
    <string name="widget_id">Widget ID</string>
    <string name="xx">XX</string>
    <string name="last_updated">Last Updated</string>

    <!--
    %1: The first placeholder.
    $d: The format for the first placeholder value. In this case, a decimal number.
    %2: The second placeholder.
    $s: The format for the second placeholder value (a string).
     -->
    <string name="date_count_format">%1$d @%2$s</string>
    <string name="update_now">Update Now</string>
</resources>
